--- a/Noviembre.web/Views/Home/Index.cshtml
+++ b/Noviembre.web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Hola, bienvenido</h1>
+                <h1 class="page-header">Hola, abienvenido</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
