--- a/Noviembre.web/Views/Municipio/Index.cshtml
+++ b/Noviembre.web/Views/Municipio/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@using Noviembre.Core.Entidades
-@model List<Usuario>
+@model List<Municipio>
 
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Usuarios</h1>
+                <h1 class="page-header">Municipios</h1>
             </div>
         </div>
 
@@ -17,28 +17,16 @@
                             <table class="table table-striped">
                                 <thead>
                                     <tr>
-                                        <th>Id</th>
                                         <th>Nombre</th>
-                                        <th>Email</th>
-                                        <th>Password</th>
                                     </tr>
                                 </thead>
 
                                 <tbody>
-                                    @foreach (Usuario u in Model)
+                                    @foreach (Municipio m in Model)
                                     {
                                         <tr>
                                             <td>
-                                                @u.Id
-                                            </td>
-                                            <td>
-                                                @u.Nombre
-                                            </td>
-                                            <td>
-                                                @u.Email
-                                            </td>
-                                            <td>
-                                                @u.Password
+                                                @m.Nombre
                                             </td>
                                         </tr>
                                     }
@@ -52,4 +40,3 @@
         </div>
     </div>
 </div>
-
