--- a/Noviembre.web/Views/Shared/_Layout.cshtml
+++ b/Noviembre.web/Views/Shared/_Layout.cshtml
@@ -141,6 +141,29 @@
                             <li>
                                 <a href="@Url.Action("Index", "Usuario")"><i class="fa fa-user"></i> Usuario</a>
                             </li>
+                            <li>
+                                <a href="@Url.Action("Index", "Ciudadano")"><i class="fa  fa-street-view"></i> Ciudadano</a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Index", "Tramite")"><i class="fa fa-file-text-o"></i> Tramite</a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-map-o"></i> Entidad
+                                    <span class="fa arrow"></span>
+                                </a>
+                                <ul class="nav nav-second-level collapse in" aria-expanded="false" style="height: 0px;">
+                                    <li>
+                                        <a href="@Url.Action("Index", "Estado")"><i></i> Estado</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action("Index", "Municipio")"> Municipio</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action("Index", "Modulo")"> Modulo</a>
+                                    </li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                     <!-- /.sidebar-collapse -->
