--- a/Noviembre.web/Views/Ciudadano/Index.cshtml
+++ b/Noviembre.web/Views/Ciudadano/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@using Noviembre.Core.Entidades
-@model List<Usuario>
+@model List<Ciudadano>
 
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Usuarios</h1>
+                <h1 class="page-header">Ciudadanos</h1>
             </div>
         </div>
 
@@ -19,26 +19,38 @@
                                     <tr>
                                         <th>Id</th>
                                         <th>Nombre</th>
+                                        <th>Apellido Paterno</th>
+                                        <th>Apellido Materno</th>
+                                        <th>Telefono</th>
+                                        <th>Direccion</th>
                                         <th>Email</th>
-                                        <th>Password</th>
                                     </tr>
                                 </thead>
 
                                 <tbody>
-                                    @foreach (Usuario u in Model)
+                                    @foreach (Ciudadano c in Model)
                                     {
                                         <tr>
                                             <td>
-                                                @u.Id
+                                                @c.Id
                                             </td>
                                             <td>
-                                                @u.Nombre
+                                                @c.Nombre
                                             </td>
                                             <td>
-                                                @u.Email
+                                                @c.ApellidoPaterno
                                             </td>
                                             <td>
-                                                @u.Password
+                                                @c.ApellidoMaterno
+                                            </td>
+                                            <td>
+                                                @c.Telefono
+                                            </td>
+                                            <td>
+                                                @c.Direccion
+                                            </td>
+                                            <td>
+                                                @c.Email
                                             </td>
                                         </tr>
                                     }
