--- a/Noviembre.web/Views/Estado/Index.cshtml
+++ b/Noviembre.web/Views/Estado/Index.cshtml
@@ -1,7 +1,47 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-}
+﻿@using Noviembre.Core.Entidades
+@model List<Estado>
 
-<h2>Index</h2>
+<div id="page-wrapper">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Estados</h1>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Nombre</th>
+                                        <th>Id</th>
+                                    </tr>
+                                </thead>
+                                
+                                <tbody>
+                                    @foreach (Estado e in Model)
+                                    {
+                                        <tr>
+                                            <td>
+                                                @e.Nombre
+                                            </td>
+                                            <td>
+                                                @e.Id
+                                            </td>
+                                        </tr>
+                                    }
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
