--- a/Noviembre.web/Views/ComprobanteDomicilio/Index.cshtml
+++ b/Noviembre.web/Views/ComprobanteDomicilio/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@using Noviembre.Core.Entidades
-@model List<Municipio>
+@model List<ComprobanteDomicilio>
 
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Municipios</h1>
+                <h1 class="page-header">Comprobantes de domicilio</h1>
             </div>
         </div>
 
@@ -19,22 +19,18 @@
                                     <tr>
                                         <th>Id</th>
                                         <th>Nombre</th>
-                                        <th>Id del Estado</th>
                                     </tr>
                                 </thead>
 
                                 <tbody>
-                                    @foreach (Municipio m in Model)
+                                    @foreach (ComprobanteDomicilio com in Model)
                                     {
                                         <tr>
                                             <td>
-                                                @m.Id
+                                                @com.Id
                                             </td>
                                             <td>
-                                                @m.Nombre
-                                            </td>
-                                            <td>
-                                                @m.Estado.Id
+                                                @com.Nombre
                                             </td>
                                         </tr>
                                     }
@@ -48,3 +44,4 @@
         </div>
     </div>
 </div>
+
