--- a/Noviembre.web/Views/Cita/Index.cshtml
+++ b/Noviembre.web/Views/Cita/Index.cshtml
@@ -13,6 +13,9 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-body">
+
+                        <a href="@Url.Action("Registro", "Cita")" class="btn btn-primary">Agregar nuevo</a>
+
                         <div class="table-responsive">
                             <table class="table table-striped">
                                 <thead>
