--- a/Noviembre.web/Views/Modulo/Index.cshtml
+++ b/Noviembre.web/Views/Modulo/Index.cshtml
@@ -13,6 +13,9 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-body">
+
+                        <a href="@Url.Action("Registro", "Modulo")" class="btn btn-primary">Agregar nuevo</a>
+
                         <div class="table-responsive">
                             <table class="table table-striped">
                                 <thead>
@@ -22,6 +25,7 @@
                                         <th>Direccion</th>
                                         <th>Horario</th>
                                         <th>Referencias</th>
+                                        <th>ID del municipio</th>
                                     </tr>
                                 </thead>
 
@@ -43,6 +47,9 @@
                                             </td>
                                             <td>
                                                 @m.Referencias
+                                            </td>
+                                            <td>
+                                                @m.Municipio.Id
                                             </td>
                                         </tr>
                                     }
