--- a/Noviembre.web/Views/Estado/Index.cshtml
+++ b/Noviembre.web/Views/Estado/Index.cshtml
@@ -14,7 +14,7 @@
                 <div class="panel panel-default">
                     <div class="panel-body">
 
-                        <a href="@Url.Action("Registro", "Estado")" class="btn btn-primary">Agregar nuevo</a>
+                        <a href="@Url.Action("Registro", "Estado", new {id = 0})" class="btn btn-primary">Agregar nuevo</a>
 
                         <div class="table-responsive">
                             <table class="table table-striped">
@@ -22,6 +22,7 @@
                                     <tr>
                                         <th>Nombre</th>
                                         <th>Id</th>
+                                        <th>Acciones</th>
                                     </tr>
                                 </thead>
                                 
@@ -34,6 +35,10 @@
                                             </td>
                                             <td>
                                                 @e.Id
+                                            </td>
+                                            <td>
+                                                <a href="@Url.Action("Registro", "Estado", new {id = e.Id})" class="btn btn-primary"><i class="fa fa-edit"></i> Editar</a>
+                                                <a class="btn btn-danger"><i class="fa fa-trash-o"></i> Eliminar</a>
                                             </td>
                                         </tr>
                                     }
