--- a/Noviembre.web/Views/Estado/Registro.cshtml
+++ b/Noviembre.web/Views/Estado/Registro.cshtml
@@ -1,4 +1,6 @@
-﻿<div id="page-wrapper">
+﻿@using Noviembre.Core.Entidades
+@model Estado
+<div id="page-wrapper">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
@@ -11,9 +13,10 @@
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <form action="@Url.Action("Guardar", "Estado")">
+                            <input type="hidden" class="form-control" name="id" value="@Model.Id"/>
                             <div class="form-group">
                                 <label>Nombre del estado:</label>
-                                <input class="form-control" name="nombre" />
+                                <input class="form-control" name="nombre" value="@if (Model.Id != 0) { @Model.Nombre}"/>
                             </div>
                             <button class="btn btn-success" type="submit">Guardar</button>
                         </form>
